# HowToOptimizeGEMM

./: CMakeLists.txt  PlotAll.py  README.md
include/: MMult.h
src/: 0_naive_matmul.c  10_subblock_simd.c  11_super_fast_matmul_idk.c  1_cal_element_per_loop.c  2_combine_k_elements_per_loop.c  3_reduce_memory_load.c  4_use_pointer.c  5_subblock_cal_element_per_loop.c  6_subblock_combine_k_elements_per_loop.c  7_subblock_reduce_memory_load.c  8_subblock_use_pointer.c  9_subblock_rerange.c  CMakeLists.txt  test_MMult.c
src/utils/: CMakeLists.txt  REF_MMult.c  compare_matrices.c  copy_matrix.c  print_matrix.c  random_matrix.c
